--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,54 +1,50 @@
-
 name: Terraform Plan
 
-on: 
+on:
   workflow_dispatch:
     inputs:
       environment:
         type: choice
-        description: 'Environment to create'
+        description: "Environment to create"
         options:
-          - test
-          - staging
           - prod
 
-
 env:
-    TF_CLOUD_ORGANIZATION: "DevOpsOrg2025"
-    TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-    TF_WORKSPACE: "terraform-github-actions"
-    CONFIG_DIRECTORY: "./terraform/environments/${{ github.event.inputs.environment }}/"
+  TF_CLOUD_ORGANIZATION: "SonUITMLops"
+  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
+  TF_WORKSPACE: "terraform-github-actions"
+  CONFIG_DIRECTORY: "./terraform/environments/${{ github.event.inputs.environment }}/"
 
 jobs:
-    terraform:
-        if: github.repository != 'hashicorp-education/learn-terraform-github-actions'
-        name: "Terraform Plan"
-        runs-on: ubuntu-latest
-        permissions:
-            contents: read
-            pull-requests: write
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
+  terraform:
+    if: github.repository != 'hashicorp-education/learn-terraform-github-actions'
+    name: "Terraform Plan"
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-            - name: Upload Configuration
-              uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
-              id: plan-upload
-              with:
-                workspace: ${{ env.TF_WORKSPACE }}
-                directory: ${{ env.CONFIG_DIRECTORY }}
-                speculative: true
-            
-            - name: Create Plan Run
-              uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
-              id: plan-run
-              with:
-                workspace: ${{ env.TF_WORKSPACE }}
-                configuration_version: ${{ steps.plan-upload.outputs.configuration_version_id }}
-                plan_only: true
+      - name: Upload Configuration
+        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
+        id: plan-upload
+        with:
+          workspace: ${{ env.TF_WORKSPACE }}
+          directory: ${{ env.CONFIG_DIRECTORY }}
+          speculative: true
 
-            - name: Get Plan Output
-              uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
-              id: plan-output
-              with:
-                plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
+      - name: Create Plan Run
+        uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
+        id: plan-run
+        with:
+          workspace: ${{ env.TF_WORKSPACE }}
+          configuration_version: ${{ steps.plan-upload.outputs.configuration_version_id }}
+          plan_only: true
+
+      - name: Get Plan Output
+        uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
+        id: plan-output
+        with:
+          plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
