--- a/production/qasystem/qasystem.yaml
+++ b/production/qasystem/qasystem.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
         - name: qasystem-c
-          image: sontapcode/qa-agent:release
+          image: sontapcode/qa-agent:release-8364cc929ffeb230e23491ff7aed81e7cd3096b5
           env:
             - name: PORT
               value: "8501"
