--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,6 +1,7 @@
 name: Terraform Plan
 
-on: workflow_dispatch:{}
+on:
+  workflow_dispatch:
 env:
   TF_CLOUD_ORGANIZATION: "SonUITMLops"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
