--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,21 +1,12 @@
 name: Terraform Apply
 
-on:
-  workflow_dispatch:
-    inputs:
-      environment:
-        type: choice
-        description: "Environment to create"
-        options:
-          - test
-          - staging
-          - prod
+on: workflow_dispatch:{}
 
 env:
   TF_CLOUD_ORGANIZATION: "SonUITMLops"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "terraform-github-actions"
-  CONFIG_DIRECTORY: "./terraform/environments/${{ github.event.inputs.environment }}/"
+  CONFIG_DIRECTORY: "./terraform/"
 
 jobs:
   terraform:
