--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,19 +1,11 @@
 name: Terraform Plan
 
-on:
-  workflow_dispatch:
-    inputs:
-      environment:
-        type: choice
-        description: "Environment to create"
-        options:
-          - prod
-
+on: workflow_dispatch:{}
 env:
   TF_CLOUD_ORGANIZATION: "SonUITMLops"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "terraform-github-actions"
-  CONFIG_DIRECTORY: "./terraform/environments/${{ github.event.inputs.environment }}/"
+  CONFIG_DIRECTORY: "./terraform/"
 
 jobs:
   terraform:
