--- a/production/qasystem/qasystem.yaml
+++ b/production/qasystem/qasystem.yaml
@@ -1,4 +1,3 @@
-# BLOG_MICROSERVICE
 apiVersion: v1
 kind: Service
 metadata:
@@ -32,71 +31,72 @@ spec:
         - name: qasystem-c
           image: sontapcode/qa-agent:release-145df08feb53b2ae8fc5ec05f95f13c999811268
           env:
-        - name: deployment_name
-          valueFrom:
-            secretKeyRef:
-              name: qasystem-secrets
-              key: deployment_name
-        - name: model_name
-          valueFrom:
-            secretKeyRef:
-              name: qasystem-secrets
-              key: model_name
-        - name: api_key
-          valueFrom:
-            secretKeyRef:
-              name: qasystem-secrets
-              key: api_key
-        - name: azure_endpoint
-          valueFrom:
-            secretKeyRef:
-              name: qasystem-secrets
-              key: azure_endpoint
-        - name: api_version
-          valueFrom:
-            secretKeyRef:
-              name: qasystem-secrets
-              key: api_version
-        - name: AZURE_OPENAI_ENGINE
-          valueFrom:
-            secretKeyRef:
-              name: qasystem-secrets
-              key: AZURE_OPENAI_ENGINE
-
-        # Second model
-        - name: api_key_2
-          valueFrom:
-            secretKeyRef:
-              name: qasystem-secrets
-              key: api_key_2
-        - name: azure_endpoint_2
-          valueFrom:
-            secretKeyRef:
-              name: qasystem-secrets
-              key: azure_endpoint_2
-        - name: api_version_2
-          valueFrom:
-            secretKeyRef:
-              name: qasystem-secrets
-              key: api_version_2
-        - name: deployment_name_2
-          valueFrom:
-            secretKeyRef:
-              name: qasystem-secrets
-              key: deployment_name_2
-        - name: model_name_2
-          valueFrom:
-            secretKeyRef:
-              name: qasystem-secrets
-              key: model_name_2
-        - name: AZURE_OPENAI_ENGINE_2
-          valueFrom:
-            secretKeyRef:
-              name: qasystem-secrets
-              key: AZURE_OPENAI_ENGINE_2
+            - name: deployment_name
+              valueFrom:
+                secretKeyRef:
+                  name: qasystem-secrets
+                  key: deployment_name
+            - name: model_name
+              valueFrom:
+                secretKeyRef:
+                  name: qasystem-secrets
+                  key: model_name
+            - name: api_key
+              valueFrom:
+                secretKeyRef:
+                  name: qasystem-secrets
+                  key: api_key
+            - name: azure_endpoint
+              valueFrom:
+                secretKeyRef:
+                  name: qasystem-secrets
+                  key: azure_endpoint
+            - name: api_version
+              valueFrom:
+                secretKeyRef:
+                  name: qasystem-secrets
+                  key: api_version
+            - name: AZURE_OPENAI_ENGINE
+              valueFrom:
+                secretKeyRef:
+                  name: qasystem-secrets
+                  key: AZURE_OPENAI_ENGINE
+            - name: api_key_2
+              valueFrom:
+                secretKeyRef:
+                  name: qasystem-secrets
+                  key: api_key_2
+            - name: azure_endpoint_2
+              valueFrom:
+                secretKeyRef:
+                  name: qasystem-secrets
+                  key: azure_endpoint_2
+            - name: api_version_2
+              valueFrom:
+                secretKeyRef:
+                  name: qasystem-secrets
+                  key: api_version_2
+            - name: deployment_name_2
+              valueFrom:
+                secretKeyRef:
+                  name: qasystem-secrets
+                  key: deployment_name_2
+            - name: model_name_2
+              valueFrom:
+                secretKeyRef:
+                  name: qasystem-secrets
+                  key: model_name_2
+            - name: AZURE_OPENAI_ENGINE_2
+              valueFrom:
+                secretKeyRef:
+                  name: qasystem-secrets
+                  key: AZURE_OPENAI_ENGINE_2
           resources:
+            requests:
+              memory: "512Mi"
+              cpu: "500m"
             limits:
-              memory: 512Mi
+              memory: "1Gi"
               cpu: "1"
           ports:
             - containerPort: 8501
